# thrml-kuramoto-lab

./: .gitignore  README.md  RESULTS.md  dtm_col_infl_clamping.py  pyproject.toml  run_capacity.py  run_capacity_q.py  run_clock.py  run_contest.py  run_density.py  run_ensemble.py  run_fss.py  run_kinetic.py  run_learned.py  run_master.py  run_plateau.py  run_rigor.py  run_substrate.py  run_sweep.py  run_tc.py
data/: README.md  ensemble_capacity.csv  ensemble_capacity_q.csv  ensemble_clock.csv  ensemble_density.csv  ensemble_fss.csv  ensemble_hopfield.csv  ensemble_kinetic.csv  ensemble_learned.csv  ensemble_placement.csv  master_curve.csv
docs/: CONCEPTS.md  EXPERIMENT_CATALOG.md  EXPERIMENT_LOG.md  PROJECT_STRUCTURE.md  RESEARCH_PROGRAM.md  RESULTS_INITIAL_ARC.md
integrations/: INTEGRATION_PACKET.md
notebooks/: 01_carrier_fraction_clamped_pgm.ipynb
specs/capabilities/: evidence-informed-sovereign-domain.capability.yaml
specs/journeys/: evaluate-sovereign-domain-decision.md
specs/personas/: sovereign-domain-architect.md
specs/stories/research/: trace-experiment-to-decision.md
src/carrier_pgm/: __init__.py  experiment.py  infiltration.py  model.py  topology.py
