[project]
name = "thrml-kuramoto-lab"
version = "0.1.0"
description = "Sparse pinning, metastable reversal, and associative-recall experiments in THRML and related network models."
requires-python = ">=3.10"
dependencies = [
    "thrml",
    "jax",
    "numpy",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]
notebook = ["jupyterlab", "ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carrier_pgm"]
